# model

./: .gitignore  README.md  pyproject.toml
prosody_ssm/: __init__.py  conversation.py  conversation_model.py  emotions.py  features.py  feedback.py  model.py
prosody_ssm/data/: __init__.py  dataset.py
prosody_ssm/streaming/: __init__.py  bus.py  frame_extractor.py  pipeline.py  session.py
prosody_ssm/streaming/adapters/: __init__.py  websocket.py
